kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metatag-service
  namespace: metaforge-prod
  labels:
    app.kubernetes.io/name: metatag-generator
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: metatag-generator
